# xfce-panel-launcher

./: .SRCINFO  .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  Makefile  Makefile.am  PKGBUILD  README.md  configure.ac  install.sh  makepkg.conf  uninstall.sh  xfce-launcher.c  xfce-launcher.desktop.in
data/: xfce-launcher.desktop.in
debian/: README.Debian  changelog  control  copyright  gbp.conf  rules  watch
docs/: LICENSE  README.md
src/: application-loader.c  application.c  config.c  events.c  folders.c  plugin.c  settings.c  settings.h  ui.c  xfce-launcher.c  xfce-launcher.h
